--- a/iris/package.json
+++ b/iris/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@heroui/button": "^2.2.26",
+    "@heroui/react": "^2.8.4",
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
     "framer-motion": "^12.23.12",
