--- a/iris/package.json
+++ b/iris/package.json
@@ -13,6 +13,7 @@
     "@heroui/button": "^2.2.26",
     "@heroui/system": "^2.4.22",
     "@heroui/theme": "^2.4.22",
+    "dotenv": "^17.2.2",
     "framer-motion": "^12.23.12",
     "next": "15.5.3",
     "react": "19.1.0",
